Require compiling on Java 11, phase 1